--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ footer {
 	margin: 0 10px 0 10px;
 }
 
-.fa-brands:hover, .fa-solid:hover{
+.fa-brands:hover,.fa-regular:hover, .fa-solid:hover{
 	color: blue;
 }
 
